completed dynamic_labels.kv/py

--- a/prac_07/dynamic_labels.kv
+++ b/prac_07/dynamic_labels.kv
@@ -1,16 +1,11 @@
-"""Practical 07 - Samuel Barrett - 13038579"""
-
 BoxLayout:
+    orientation: 'vertical'
     BoxLayout:
         orientation: 'vertical'
-        # this layout is populated with Label widgets in app code
         id: main
-    Label:
-        size_hint_y: 0.1
-        text: app.status_text
 #    BoxLayout:
 #        orientation: 'horizontal'
-#        size_hint_y: 0.2
+#        size_hint_y: 0.1
 #        Button:
 #            text: "Create Labels"
 #            on_release: app.create_widgets()
